gcc/testsuite/rust/rustc/ui/extern/issue-16250.rs
#![deny(warnings)]

pub struct Foo;

extern "C" {
    pub fn foo(x: (Foo)); // { dg-error "" "" { target *-*-* } }
}

fn main() {}

